--- a/deployments/charts/metrics-server/templates/aggregated-metrics-reader-cluster-role.yaml
+++ b/deployments/charts/metrics-server/templates/aggregated-metrics-reader-cluster-role.yaml
@@ -3,6 +3,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: system:{{ template "metrics-server.name" . }}-aggregated-reader
+  namespace: default
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
