--- a/deployments/charts/metrics-server/templates/metrics-api-service.yaml
+++ b/deployments/charts/metrics-server/templates/metrics-api-service.yaml
@@ -3,6 +3,7 @@ apiVersion: apiregistration.k8s.io/v1beta1
 kind: APIService
 metadata:
   name: v1beta1.metrics.k8s.io
+  namespace: default
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
