--- a/deployments/charts/metrics-server/templates/metrics-server-crb.yaml
+++ b/deployments/charts/metrics-server/templates/metrics-server-crb.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: system:{{ template "metrics-server.fullname" . }}
+  namespace: default
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
