--- a/deployments/charts/metrics-server/templates/metrics-server-serviceaccount.yaml
+++ b/deployments/charts/metrics-server/templates/metrics-server-serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "metrics-server.serviceAccountName" . }}
+  namespace: default
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
