--- a/deployments/charts/minio/values.yaml
+++ b/deployments/charts/minio/values.yaml
@@ -8,7 +8,7 @@ fullnameOverride: ""
 
 ## set kubernetes cluster domain where minio is running
 ##
-clusterDomain: my-domain
+clusterDomain: cloud.lab
 
 ## Set default image, imageTag, and imagePullPolicy. mode is used to indicate the
 ##
@@ -95,7 +95,7 @@ persistence:
   storageClass: "rook-ceph-block"
   VolumeName: ""
   accessMode: ReadWriteOnce
-  size: 5Gi
+  size: 2Gi
 
   ## If subPath is set mount a sub folder of a volume instead of the root of the volume.
   ## This is especially handy for volume plugins that don't natively support sub mounting (like glusterfs).
@@ -139,7 +139,7 @@ ingress:
     # nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
   path: /
   hosts:
-    - minio.my-domain
+    - minio.cloud.lab
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
