--- a/deployments/eck/kibana.yml
+++ b/deployments/eck/kibana.yml
@@ -23,7 +23,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host: kibana.my-domain
+  - host: kibana.cloud.lab
     http:
       paths:
       - path: /
