--- a/deployments/eck/filebeat.yml
+++ b/deployments/eck/filebeat.yml
@@ -66,7 +66,7 @@ spec:
       dnsPolicy: ClusterFirst
       containers:
       - name: filebeat
-        image: docker.elastic.co/beats/filebeat:7.5.1
+        image: harbor.cloud.lab/public/docker.elastic.co/beats/filebeat:7.5.1
         args: [
           "-c", "/etc/filebeat.yml",
           "-e",
