--- a/deployments/eck/operator.yml
+++ b/deployments/eck/operator.yml
@@ -3019,7 +3019,7 @@ spec:
     spec:
       serviceAccountName: elastic-operator
       containers:
-      - image: docker.elastic.co/eck/eck-operator:1.0.0-beta1
+      - image: harbor.cloud.lab/public/docker.elastic.co/eck/eck-operator:1.0.0-beta1
         name: manager
         args: ["manager", "--operator-roles", "all", "--enable-debug-logs=false"]
         env:
@@ -3032,7 +3032,7 @@ spec:
           - name: WEBHOOK_PODS_LABEL
             value: elastic-operator
           - name: OPERATOR_IMAGE
-            value: docker.elastic.co/eck/eck-operator:1.0.0-beta1
+            value: harbor.cloud.lab/public/docker.elastic.co/eck/eck-operator:1.0.0-beta1
         resources:
           limits:
             cpu: 1
